--- a/index.html
+++ b/index.html
@@ -1,58 +1,12 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-   <title> Diko alam pano ko nagawa to Sir Con HAHAHAHA✨ </title>
-   <script type="text/javascript">
-   alert("Hello gumana ba?!")
-   alert("pag to di gumana hampas ko pc ko!HAHA")
-   alert("AY AYAN BAT ANDITO KAPA?!")
-   alert("HHAHA DE JK PO, ETO NA!")
-   alert("........")
-   alert("........")
-   alert("........")
-   alert("........")
-   </script>
-   <style>
-body{
-   background-image:url(https://media.tenor.com/5jPeC677i2AAAAAd/good-morning-funny-animals.gif);
-   background-size: cover;
-   background-attachment: fixed;
-}
-.content{
-    background:https://media.tenor.com/5jPeC677i2AAAAAd/good-morning-funny-animals.gif ;
-    width: 10%;
-    padding: 40px;
-    margin: 100px auto;
-    }
-</style>
-   <img src="https://media.tenor.com/ZvLxN8ykrO4AAAAi/qoobee-screaming.gif"/>
-   <p style="color: white"> Kunyare cute.</p>
-   
-   <img src="https://media.tenor.com/vw89pCcUjcgAAAAi/qoo-bee-qoo-bee-agapi.gif"/>
-   <p style="color: white"> MAINGGIT KAYOOOO HAHAHAAHAH</p>
-   
-   <img src="https://media.tenor.com/AnkoT80tFw4AAAAj/qoobee-agapi-computer.gif">
-   <p style="color: white"">  MEDJO MAHIRAP TONG CONCEPT NA NAISIP KO PERO BAHALA NA.</p>
-   
-   <img src="https://media.tenor.com/pxb2AvFHHjEAAAAj/qoobee-tired.gif">
-   <p style="color: white""> I AM PROBABLY TIRED NA NUNG GINAWA KOTO POT!</p>
-   
-   <img src="https://media.tenor.com/3N_7NL4gwuAAAAAM/qoobee.gif">
-   <p style="color: white"">easy or tough, i know I can break a leg in every stuff ◉‿◉</p>
-   
-   <img src="https://media.tenor.com/AYwL3p-UcVcAAAAj/sunglasses-sunny-day.gif">
-   <p style="color: white"">and also be confident lang and trust youurrr taleenntsssss</p>
-   
-   <img src="https://media.tenor.com/wKyHEVQRnUwAAAAC/qoobee-heart.gif">
-
-   <p style ="color: white""> whatever it is I'm proud of you!</p>
-   
-   <img src="https://media.tenor.com/QHPlW_u3RV8AAAAC/qoobee.gif">
-   <p style ="color: white""> I know most of what I'm saying doesn't make sense but ehhehe</p>
-   
-   <img src="https://media.tenor.com/d3D01-85JCMAAAAM/qoobee.gif">
-   <h1 style="font-family:Times New Roman">mwa from bigboss</h1>
-   <a href= "https://gifdb.com/images/high/jumpscare-clap-the-conjuring-a1ztsnkhwlfglpzb.webp"><h1><i>oh pipindutin nya yan...
-   </body>
-   </html>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+</body>
+</html>
