--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="mystyle.css">
     <script src="https://kit.fontawesome.com/7cad7aecac.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="fvion.png" style="border-radius: 15px;">
 </head>
 <style>
     .class-about-col-1 img{
@@ -17,7 +18,7 @@
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: rgb(10, 185, 10);
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -60,21 +61,20 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#background">Background</a></li>
                     <li><a href="#contacts">Contacts</a></li>
-
                 </ul>
             </nav>
             <div class="header-text">
-                <p> Newbie Developer/ Web Designer</p>
+                <p> Newbie Developer / Web Designer</p>
                 <h1>Hi, I'm <span>Nel Chrimson</span> <br> from The Philippines!</h1>
             </div>
         </div>
     </div>
     <!-----------About------------>
-    <div id="about">
+   <div id="about">
         <div class="container">
             <div class="row">
                 <div class="class-about-col-1">
-                    <img src="nobg.jpg" width="450px ">
+                    <img src="nobg.jpg" width="450px">
                 </div>
                 <div class="class-about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -83,6 +83,7 @@
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab(event, 'personal information')">Personal information</p>
                         <p class="tab-links" onclick="opentab(event, 'hobbies')">Hobbies</p>
+                        <p class="tab-links" onclick="opentab(event, 'achivements')">Achievements</p>
                         <p class="tab-links" onclick="opentab(event, 'educational attainment')">Educational Attainment</p>
                     </div>
                    
@@ -104,12 +105,26 @@
 
                         </ul>
                     </div>
+                    <div class="tab-contents" id="achivements">
+                        <ul>
+                            <li><span>Division Schools Press Conference</span><br>3rd Placer Editorial Cartooning </li>
+                            <li><span>Sports</span><br>2-time Bronze Medalist</li>
+                            <li><span>Silver Medalist</span><br>Bookworm Quizz</li>
+                            <li><span>Regional Schools Press Conference</span><br>Dasmarinas Schools Division Representative for Editorial Cartooning</li>
+                            <li><span>Representative for New Era SHS Athletes</span><br>Athletic Sprints at De La Salle University-Dasmarinas. Men's Division</li>
+                            <li><span>Representative for New Era SHS Athletes</span><br>Long Jump at De La Salle University-Dasmarinas. Men's Division</li>
+                            <li><span>Representative for New Era SHS Athletes</span><br>Athletic Hurdles at De La Salle University-Dasmarinas. Men's Division</li>
+                            <li><span>2nd Placer </span><br>Buwan ng Wika Poster Making</li>
+
+
+                        </ul>
+                    </div>
                     <div class="tab-contents" id="educational attainment">
                         <ul>
                             <li><span>Elementary</span><br>Graduate</li>
                             <li><span>Junior High School</span><br>Completer</li>
                             <li><span>Senior High School</span><br>Graduate</li>
-                            <li><span>College</span><br>Took Bachelor of Secondary Education Major In English<br> Undergraduate<br> Currently taking Bachelor of Science in Information System</li>
+                            <li><span>College</span><br>Took Bachelor of Secondary Education Major In English<br> Undergraduate<br> Currently taking Bachelor of Science in Information System at the Kolehiyo ng Lungsod ng Dasmarinas.</li>
 
                         </ul>
                     </div>
@@ -146,33 +161,37 @@
             <div>
                 <i class="fa-solid fa-bread-slice"></i>
                 <h2>Assistant Baker</h2>
-                <p>2022-March 2023, I worked as an Assistnat Baker at The Courtyard Deli and Cafe by BGMC located in Salitran-Salawag Road Near The Orchard, Caite.</p>
+                <p>2022-March 2023, I worked as an Assistnat Baker at The Courtyard Deli and Cafe by BGMC located in Salitran-Salawag Road Near The Orchard, Cavite.</p>
                 <a href="https://www.facebook.com/profile.php?id=100076371194984">Learn more...</a>
                 
             </div>
         </div>
     </div>
 </div>
-<!-------------contacts------->
-<div id="contacts">
+<div id="contact">
     <div class="container">
-        <h1 class="sub-title"><j>Contacts</h1><br><br></j>
-        <div class="contact-list">
-            <div class="contact">
-        <div class="facebook">
-            <a href="https://www.facebook.com/nelchrimson.garin">
-            <img src="fb blk.jpg" width="100" height="100" style="border-radius: 17px;"><br><br>
-            <div class="layer"> </a>
-              </div>
-        </div> 
-        <div class="viber">
-            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fvb.me%2FletsChatOnViber%3Ffbclid%3DIwAR1u2_wYV3EpSfDG6_AcOL_W7rA7f_DcujghFzWSunmcYzvjKwcOmMKY5zc&h=AT1qBgIXjHkwlrSOs2zp5QklOTSwX0mM_-1hTm45luTtimD_9zQED2sl86bhbaGTnBfGzaXExwT8VUE7GBqNs9g_uiflNJhXPk1Yq3jPcDiSCv6tyumt25KFs7uhLuINMiouDw">
-            <img src="vber.png" width="100" height="100" style="border-radius:17px;">
-            <div class="layer"></a>
-              </div>
+        <div class="row">
+            <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p><i class="fa-solid fa-paper-plane"></i>garin.nelchrimsonn.kld@gmail.com</p>
+            <p><i class="fa-solid fa-phone"></i>09611965205</p>
+            <div class="social-icons">
+                <a href="https://web.facebook.com/nelchrimson.garin"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/nlkrimsilk/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fvb.me%2FletsChatOnViber%3Ffbclid%3DIwAR0OPB8B0SCZgX424188uv3U0gPKTffQJUflGhtZmRsSUma31C9hhTFDxkg&h=AT0LyaGTgkKbaHIZhvjGcdpWgr7P6LHcp0rDqLcu5Vt9wBTcnEZ1h-mCz-Cb5uxcYj20qQMo518-Xln_ovOspDpuZ2c6cBhnrPP6pPbec30r9UboQdZ5e6QspGzA4QkTUnK_iA"><i class="fa-brands fa-viber"></i></a>
+            </div>
+        </div>
+        <div class="contact-right">
+            <form name="submit-to-google-sheet">
+                <input type="text" name="Name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your email" required>
+                <textarea name="Message"rows="6" placeholder="Your Message"></textarea>
+                <button type="submit" class="btn btn2">Submit</button>
+
+            </form>
+            <span id="msg"></span>
         </div>
     </div>
-
 </div>
    <script>
 
@@ -191,5 +210,24 @@
 }
 
    </script> 
+   <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzPByJSFIub7-5pydukB1JsRmJfb-5-jTOcFhxL2XGz3nMQ28vXUJPt0KCSb_XIEe77pw/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById(msg)
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent"
+            setTimeout(function(){
+                msg.innerHTML = ""
+
+            },6000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
